--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "gatsby": "^2.23.7",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-manifest": "^2.4.12",
+    "gatsby-plugin-mdx": "^1.4.0",
     "gatsby-plugin-offline": "^3.2.11",
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-sass": "^2.3.4",
     "gatsby-plugin-sharp": "^2.6.12",
+    "gatsby-plugin-theme-ui": "^0.3.3",
     "gatsby-source-filesystem": "^2.3.12",
     "gatsby-transformer-remark": "^2.8.47",
     "gatsby-transformer-sharp": "^2.5.5",
