--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "gatsby": "^2.23.7",
+    "gatsby-cli": "^2.12.113",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-manifest": "^2.4.12",
     "gatsby-plugin-mdx": "^1.4.0",
