--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
+    "@mdx-js/mdx": "v1",
+    "@mdx-js/react": "v1",
     "bootstrap": "^4.5.0",
     "gatsby": "^2.23.7",
     "gatsby-cli": "^2.12.113",
@@ -28,7 +30,6 @@
     "gatsby-source-filesystem": "^2.3.12",
     "gatsby-transformer-sharp": "^2.5.5",
     "nanoid": "^3.1.10",
-    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
@@ -49,7 +50,8 @@
     "gh-pages": "^3.1.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "sass": "^1.49.9"
   },
   "repository": {
     "type": "git",
