--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "gatsby-cli": "^2.12.113",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-manifest": "^2.4.12",
-    "gatsby-plugin-mdx": "^1.4.0",
     "gatsby-plugin-offline": "^3.2.11",
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-sass": "^2.3.4",
     "gatsby-plugin-sharp": "^2.6.12",
     "gatsby-source-filesystem": "^2.3.12",
+    "gatsby-transformer-mdx": "^1.2.0",
     "gatsby-transformer-sharp": "^2.5.5",
     "nanoid": "^3.1.10",
     "prism-react-renderer": "^1.3.1",
